--- a/cgmap/static/cgmap/style.css
+++ b/cgmap/static/cgmap/style.css
@@ -368,7 +368,6 @@ hr {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 0px 8px;
 
     position: static;
     width: 66px;
@@ -389,14 +388,10 @@ hr {
 }
 
 /* scale related ui */
-.scale-element-group {
-    position: relative;
-    /* width: 16px; */
-    width: -moz-fit-content;
-    width: fit-content;
-    /* height: 100px; */
-    height: -moz-fit-content;
-    height: fit-content;
+.scale-group-temperature {
+    position: static;
+    width: 300px;
+    height: 16px;
     left: 0%;
     right: -525%;
     top: 0%;
@@ -470,19 +465,6 @@ hr {
     transform: rotate(-90deg);
 }
 
-.rectangle {
-    position: relative;
-    width: 16px;
-    height: 20px;
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    bottom: 0%;
-    z-index: 1;
-
-    background: #FFFFFF;
-}
-
 .scale-group-text {
     position: static;
     /* width: 16px; */
@@ -523,7 +505,7 @@ hr {
     /* height: 676px; */
     height: -moz-fit-content;
     height: fit-content;
-    top: 20%;
+    top: 25%;
     right: 6px;
 
     /* Accent */
@@ -625,6 +607,25 @@ hr {
     order: 1;
     flex-grow: 0;
     margin: 4px 4px;
+}
+
+.temperature-container .scale-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    position: static;
+    width: 66px;
+    height: 325px;
+    left: 32.5px;
+    top: 36px;
+
+    background: #FFFFFF;
+    border: 1px solid var(--primary);
+    box-sizing: border-box;
+    box-shadow: 0px 0px 0px 4px rgba(43, 179, 192, 0.2);
+    border-radius: 8px;
 }
 
 /* ui for timeline element */
@@ -954,9 +955,9 @@ a {
 }
 
 
-/**********************
-* Custom depth slider *
-**********************/
+/*****************
+* Custom sliders *
+*****************/
 
 #number{
   height: 16px;
@@ -967,6 +968,14 @@ a {
   margin: 4px;
 }
 
+#depth_range{
+  background: linear-gradient(0.25turn, var(--subtle_text), var(--accent));
+}
+
+#temp_scale{
+  background: linear-gradient(0.25turn, var(--subtle_text), var(--accent));
+}
+
 .slider-container {
   position: relative;
   height: 16px; /* height of the outside container */
@@ -974,7 +983,7 @@ a {
   width: -moz-fit-content;
   width: fit-content;
   /*transform: rotate(-90deg);*/
-  left: -10px;
+  left: -20px;
   justify-content: top;
   /* Accent */
   border: 1px solid var(--accent);
@@ -1036,13 +1045,8 @@ a {
     height: -moz-fit-content;
     height: fit-content;
     transform:rotate(90deg);
-    top: -135px;
+    top: -130px;
     left: 125px;
-
-    /* Accent */
-    border: 1px solid var(--accent);
-    box-sizing: border-box;
-    border-radius: 8px;
 
     /* Inside Auto Layout */
     flex: none;
@@ -1051,6 +1055,36 @@ a {
     margin: 0px 8px;
 
 }
+
+    #tooltip {
+        position: absolute;
+        top: 2.25rem;
+        right: -1.5rem;
+        transform: rotate(90deg);
+    }
+    #tooltip span {
+        position: absolute;
+        text-align: center;
+        display: block;
+        line-height: 1;
+        padding: 0.125rem 0.25rem;
+        color: #fff;
+        border-radius: 0.125rem;
+        background: var(--primary);
+        font-size: 1.25rem;
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
+    #tooltip span:before {
+        position: absolute;
+        content: "";
+        bottom: 35%; left: -8px;
+        /*transform: translateX(-50%);*/
+        transform: rotate(90deg);
+        width: 0; height: 0;
+        border: 4px solid transparent;
+        border-top-color: #6BA132;
+    }
 
 /*****************************
 * Opacity and Color elements *
@@ -1067,8 +1101,8 @@ a {
 .sand_brown{background: var(--sand_brown);}
 .orange_brown{background: var(--orange_brown);}
 
-.red{background: var(--red);}
-.orange{background: var(--orange);}
+.red{background: linear-gradient( var(--red), var(--accent));}
+.orange{background: linear-gradient( var(--orange), var(--accent));}
 .yellow{background: var(--yellow);}
 .green{background: var(--green);}
 .blue{background: var(--blue);}
