WP030: adding structure of impressums pages with dummy text

--- a/cgmap/templates/cgmap/contact.html
+++ b/cgmap/templates/cgmap/contact.html
@@ -17,6 +17,29 @@
 
 {% block content %}
 
-<div>This is the contact page</div>
+<div class="container m-t-md" style="background: var(--accent)">
+    <div class="row" role="main">
+        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-main">
+            <div class="bodytext">
+                <h3 class="header3">Impressum und Kontakt</h3>
+                <p>
+                    <span>Muster structure</span>
+                    <br>
+                    <span>Information to owner of this site and how to contact them.</span>
+                </p>
+                <p>
+                    <span>Address</span>
+                    <br>
+                    <span>Information to owner of this site and how to contact them.</span>
+                </p>
+                <p>
+                    <span>Contact details</span>
+                    <br>
+                    <span>Information to owner of this site and how to contact them.</span>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock content %}
