--- a/cgmap/templates/header.html
+++ b/cgmap/templates/header.html
@@ -31,7 +31,7 @@
             </button>
             <div class="dropdown-menu dropdown-menu-lg-left" aria-labelledby="dropdownMenu">
                 <button class="dropdown-item" type="button"><a href="{% url 'index' %}">Map</a></button>
-                <button class="dropdown-item" type="button"><a href="{% url 'about' %}">Impressum</a></button>
+                <button class="dropdown-item" type="button"><a href="{% url 'about' %}">About</a></button>
                 <button class="dropdown-item" type="button"><a href="{% url 'legal' %}">Datenschutz</a></button>
                 <button class="dropdown-item" type="button"><a href="{% url 'contact' %}">Kontakt</a></button>
             </div>
