--- a/cgmap/templates/base_template.html
+++ b/cgmap/templates/base_template.html
@@ -19,8 +19,8 @@
             {% block head_css_site %}
                 {# website for google icons: https://fonts.google.com/icons?selected=Material+Icons #}
                 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">
-                <link rel="stylesheet" type="text/css" href="{% static 'cgmap/style.css' %}">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+                <link rel="stylesheet" type="text/css" href="{% static 'cgmap/style.css' %}">
             {% endblock head_css_site %}
             {% block head_css_section %}{% endblock head_css_section %}
             {% block head_css_page %}{% endblock head_css_page %}
@@ -30,7 +30,7 @@
     <body>
     {# Navigation Menu #}
         {% block Navbar %}
-            {% include "header.html" %}
+            {% include nav_tmpl|default:"header.html" %}
         {% endblock Navbar %}
     {# Content #}
         <div id="site-wrapper">
