--- a/cgmap/templates/cgmap/about.html
+++ b/cgmap/templates/cgmap/about.html
@@ -15,6 +15,12 @@
 
 {% endblock footer_javascript_page %}
 
+{% block Navbar %}
+    {% with nav_tmpl="nav_header.html" %}
+        {{ block.super }}
+    {% endwith %}
+{% endblock %}
+
 {% block content %}
 
 <div class="container m-t-md" style="background: var(--accent)">
