--- a/cgmap/templates/footer.html
+++ b/cgmap/templates/footer.html
@@ -1,6 +1,9 @@
 {# contains the footer with copyright and links to other sites #}
 <footer class="footer" id="footer">
     <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+        <span class="text-muted"><a href="{% url 'index' %}">Map</a></span>
+        <span class="text-muted"><a href="{% url 'about' %}">About</a></span>
+        <span class="text-muted"><a href="{% url 'legal' %}">Datenschutz</a></span>
+        <span class="text-muted"><a href="{% url 'contact' %}">Kontakt</a></span>
     </div>
 </footer>
