--- a/cgmap/templates/header.html
+++ b/cgmap/templates/header.html
@@ -1,29 +1,5 @@
 {# contains the header and menu bar #}
 <header>
-    <!--{% block nav-style %} {% endblock nav-style %}
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Fixed navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>-->
     <div class="btn-group" role="group" aria-label="Navbar" id="nav-menu">
         <div class="dropdown">
             <button class="btn btn-secondary" type="button" id="dropdownMenu" data-toggle="dropdown" data-display="static"  aria-haspopup="true" aria-expanded="false">
@@ -31,21 +7,10 @@
             </button>
             <div class="dropdown-menu dropdown-menu-lg-left" aria-labelledby="dropdownMenu">
                 <button class="dropdown-item" type="button"><a href="{% url 'index' %}">Map</a></button>
-                <button class="dropdown-item" type="button"><a href="{% url 'about' %}">About</a></button>
+                <button class="dropdown-item" type="button"><a href="{% url 'about' %}">Über das Projekt</a></button>
                 <button class="dropdown-item" type="button"><a href="{% url 'legal' %}">Datenschutz</a></button>
                 <button class="dropdown-item" type="button"><a href="{% url 'contact' %}">Kontakt</a></button>
             </div>
-        </div><!--
-        <div class="dropdown">
-            <button class="btn btn-secondary" type="button" id="dropdownMenuSearch" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
-                <span class="material-icons" aria-hidden="true">&#xE8B6;</span>
-            </button>
-            <div class="dropdown-menu dropdown-menu-lg-left" aria-labelledby="dropdownMenuSearch">
-                <form class="form-inline mt-2 mt-md-0" action="" method="get">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </div>-->
+        </div>
     </div>
 </header>
