change text to german

--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="depth-container left-transition" id="left-slider">
             <div class="depth-title-wrapper">
-                <div class="description default-text-small">Depth in cm/m</div>
+                <div class="description default-text-small">Tiefe in cm/m</div>
                 <button class="btn btn-primary btn-sm" id="depth-slider" >
                     <span class="material-icons md-18 left" id="depth_chevron">chevron_left</span>
                 </button>
@@ -134,9 +134,9 @@
         <div class="nav chart-container" id="tab-nav" style="display: none;">
 
             <ul class="nav nav-pills nav-jt">
-                <li class="nav-item"><a class="nav-link active" id="bs-tab1" href="#first" data-toggle="tab">Annual Soil Temperature Chart</a></li>
-                <li class="nav-item"><a class="nav-link" id="bs-tab2" href="#second" data-toggle="tab">Soil Temperature Depth Profile</a></li>
-                <li class="nav-item"><a class="nav-link" id="bs-tab3" href="#third" data-toggle="tab">Depth Time Chart</a></li>
+                <li class="nav-item"><a class="nav-link active" id="bs-tab1" href="#first" data-toggle="tab">Jährliches Bodentemperatur Diagramm</a></li>
+                <li class="nav-item"><a class="nav-link" id="bs-tab2" href="#second" data-toggle="tab">Bodentemperaturprofiel</a></li>
+                <li class="nav-item"><a class="nav-link" id="bs-tab3" href="#third" data-toggle="tab">Tiefen-Zeit Diagramm</a></li>
                 <li class="nav-item"><a class="nav-link" id="close-btn" href="#" data-toggle="tab"><span class="material-icons md-18 close">close</span></a></li>
             </ul>
             <div class="tab-content" id="tab-content">-
@@ -189,7 +189,7 @@
         </div>
         <div class="temperature-container right-transition" id="right-slider">
             <div class="temperature-title-wrapper">
-                <div class="description default-text-small">Temperature in °C</div>
+                <div class="description default-text-small">Temperatur in °C</div>
                 <button class="btn btn-primary btn-sm" id="temperature-slider">
                     <span class="material-icons md-18 right" id="temperature_chevron">chevron_right</span>
                 </button>
