--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -140,7 +140,7 @@
                 <li class="nav-item"><a class="nav-link" id="bs-tab3" href="#third" data-toggle="tab">Tiefen-Zeit Diagramm</a></li>
                 <li class="nav-item"><a class="nav-link" id="close-btn" href="#" data-toggle="tab"><span class="material-icons md-18 close">close</span></a></li>
             </ul>
-            <div class="tab-content" id="tab-content">-
+            <div class="tab-content" id="tab-content">
                 <div id="first" class="tab-pane fade in active show">
                     <div class="canvas-container" id="chart-container">
                         <canvas id="tempChart" height="190"></canvas>
