--- a/cgmap/static/cgmap/style.css
+++ b/cgmap/static/cgmap/style.css
@@ -405,6 +405,17 @@ hr {
     margin: 8px 0px;
 }
 
+.scale-group-depth {
+    position: static;
+    width: 16px;
+    height: 300px;
+    left: 0%;
+    right: -525%;
+    top: 0%;
+    bottom: 0%;
+    background: #FFFFFF;
+}
+
 /* scale related ui */
 .scale-group-temperature {
     position: static;
@@ -994,6 +1005,10 @@ a {
   background: linear-gradient(0.25turn, var(--subtle_text), var(--accent));
 }
 
+#depth_temp_scale{
+  background: linear-gradient(0.25turn, var(--subtle_text), var(--accent));
+}
+
 /** Labels below slider**/
 .sliderticks {
   display: flex;
@@ -1012,7 +1027,7 @@ a {
   line-height: 40px;
   margin: 0 0 20px 0;
 }
-.sliderticks span{
+.sliderticks .temp{
   transform: rotate(90deg);
   transform-origin: right, top;
   -ms-transform: rotate(90deg);
