--- a/cgmap/static/cgmap/style.css
+++ b/cgmap/static/cgmap/style.css
@@ -988,15 +988,7 @@ a {
 * Custom sliders *
 *****************/
 
-#number{
-  height: 16px;
-  width: 500px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 4px;
-}
-
+/** linear gradients for all range slider backgrounds**/
 #depth_range{
   background: linear-gradient(0.25turn, var(--subtle_text), var(--accent));
 }
@@ -1088,6 +1080,16 @@ a {
   background: #04AA6D; /* Green background */
   cursor: pointer; /* Cursor on hover */
   border-radius: 50%;
+}
+
+/* hide input thumb for chart legend range*/
+#depth_temp_scale::-webkit-slider-thumb {
+  display: none;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 0;
+  height: 0;
 }
 
 .slider::-moz-range-thumb {
