--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -190,7 +190,7 @@
                 <div class="slider-container" id="temperature">
                     <div class="scale-group-temperature">
                         <input type="range" min="-14" max="0" step="0.1" value="0" class="slider" id="temp_scale" data-popup-enabled="true" orient="vertical">
-                        <div class="sliderticks">
+                        <div class="sliderticks" style="padding-left: 5px; padding-right: 8px;">
                             <p><span class="temp">3</span></p>
                             <p><span class="temp">4</span></p>
                             <p><span class="temp">5</span></p>
