adding content to impressum and changing sticky footer

--- a/cgmap/templates/footer.html
+++ b/cgmap/templates/footer.html
@@ -4,6 +4,6 @@
         <span class="text-muted"><a href="{% url 'index' %}">Map</a></span>
         <span class="text-muted"><a href="{% url 'about' %}">About</a></span>
         <span class="text-muted"><a href="{% url 'legal' %}">Datenschutz</a></span>
-        <span class="text-muted"><a href="{% url 'contact' %}">Kontakt</a></span>
+        <span class="text-muted"><a href="{% url 'contact' %}">Impressum</a></span>
     </div>
 </footer>
