--- a/cgmap/templates/header.html
+++ b/cgmap/templates/header.html
@@ -9,7 +9,7 @@
                 <button class="dropdown-item" type="button"><a href="{% url 'index' %}">Map</a></button>
                 <button class="dropdown-item" type="button"><a href="{% url 'about' %}">Über das Projekt</a></button>
                 <button class="dropdown-item" type="button"><a href="{% url 'legal' %}">Datenschutz</a></button>
-                <button class="dropdown-item" type="button"><a href="{% url 'contact' %}">Kontakt</a></button>
+                <button class="dropdown-item" type="button"><a href="{% url 'contact' %}">Impressum</a></button>
             </div>
         </div>
     </div>
