--- a/cgmap/static/cgmap/style.css
+++ b/cgmap/static/cgmap/style.css
@@ -1,6 +1,16 @@
 html, body {
     max-width: 100%;
+    height: 100%;
     overflow-x: hidden;
+}
+
+html body .container-fluid.body-content {
+    position: absolute;
+    top: 50px;
+    bottom: 30px;
+    right: 0;
+    left: 0;
+    overflow-y: auto;
 }
 
 /****************
