--- a/cgmap/templates/nav_header.html
+++ b/cgmap/templates/nav_header.html
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="{% url 'legal' %}">Datenschutz</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact' %}">Kontakt</a>
+                    <a class="nav-link" href="{% url 'contact' %}">Impressum</a>
                 </li>
             </ul>
         </div>
