adding text to about page

--- a/cgmap/templates/cgmap/about.html
+++ b/cgmap/templates/cgmap/about.html
@@ -29,28 +29,16 @@
             <div class="bodytext">
                 <h1 class="header1">Über das Projekt</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Wir wollen mit unserem Projekt eine anwenderorientierte Karte zur Darstellung der Bodentemperaturen
+                    in Deutschland bereitstellen. Die interaktive Bedienbarkeit soll es den Nutzer*innen ermöglichen,
+                    Informationen über den thermischen Bodenzustand an bestimmten Standorten und in bestimmten Tiefen zu
+                    bekommen. Die verfügbar gemachten Daten bestehen auf Simulationen mit einem physikalisch-basierten
+                    Wärmeausbreitungsmodell (CryoGrid). Insbesondere werden Informationen über zu erwartende Änderungen der
+                    Bodentemperaturen durch Klimawandel bereitgestellt.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Unterstützt wird unser Projekt vom <a href='https://www.awi.de/forschung/technologietransfer/stabsstelle.html' target='_blank'>AWI Technologietransfer</a> und in der
+                    Projektgruppe <a href='https://www.awi.de/en/science/junior-groups/permarisk.html' target='_blank'>PermaRisk</a> angesiedelt.
                 </p>
             </div>
         </div>
