bug fix: adjusting chart and depth request as well as minor misspelling

--- a/cgmap/templates/cgmap/about.html
+++ b/cgmap/templates/cgmap/about.html
@@ -37,8 +37,8 @@
                     Bodentemperaturen durch Klimawandel bereitgestellt.
                 </p>
                 <p>
-                    Unterstützt wird unser Projekt vom <a href='https://www.awi.de/forschung/technologietransfer/stabsstelle.html' target='_blank'>AWI Technologietransfer</a> und in der
-                    Projektgruppe <a href='https://www.awi.de/en/science/junior-groups/permarisk.html' target='_blank'>PermaRisk</a> angesiedelt.
+                    Unterstützt wird unser Projekt vom <a href='https://www.awi.de/forschung/technologietransfer/stabsstelle.html' target='_blank'>AWI Technologietransfer</a>
+                    Das Projekt ist Teil der Nachwuchsgruppe <a href='https://www.awi.de/en/science/junior-groups/permarisk.html' target='_blank'>Permarisk</a>.
                 </p>
             </div>
         </div>
