--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -143,7 +143,7 @@
 
             <ul class="nav nav-pills nav-jt">
                 <li class="nav-item"><a class="nav-link active" id="bs-tab1" href="#first" data-toggle="tab">Jährliches Bodentemperatur Diagramm</a></li>
-                <li class="nav-item"><a class="nav-link" id="bs-tab2" href="#second" data-toggle="tab">Bodentemperaturprofiel</a></li>
+                <li class="nav-item"><a class="nav-link" id="bs-tab2" href="#second" data-toggle="tab">Bodentemperaturprofil</a></li>
                 <li class="nav-item"><a class="nav-link" id="bs-tab3" href="#third" data-toggle="tab">Tiefen-Zeit Diagramm</a></li>
                 <li class="nav-item"><a class="nav-link" id="close-btn" href="#" data-toggle="tab"><span class="material-icons md-18 close">close</span></a></li>
             </ul>
